--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "wds_spotify",
   "version": "1.0.0",
-  "description": "A personal music track player with spotify integration",
+  "description": "Discover and play songs with dynamically displayed lyrics for the selected track.",
   "scripts": {
-    "devStart": "concurrently \"cd client && npm run dev\" \"cd server && npm run devStart\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devStart": "concurrently \"cd client && npm run dev\" \"cd server && npm run devStart\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tjklimoski/WDS_Spotify_Clone.git"
+    "url": "git+https://github.com/Tjklimoski/Spotify-player.git"
   },
   "author": "TJ Klimoski",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Tjklimoski/WDS_Spotify_Clone/issues"
+    "url": "https://github.com/Tjklimoski/Spotify-player/issues"
   },
-  "homepage": "https://github.com/Tjklimoski/WDS_Spotify_Clone#readme",
+  "homepage": "https://github.com/Tjklimoski/Spotify-player#readme",
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
